--- a/themes/umeditor.css
+++ b/themes/umeditor.css
@@ -28,3 +28,91 @@
     opacity: 0;
     font-size: 30px;
 }
+
+.edui-menu{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    border: 1px #f2f2f2 solid;
+    background-image: url(./images/menu.png);
+    -webkit-background-size: auto 20px;
+}
+.edui-toolbar{
+    position: absolute;
+    width: 150px;
+    height: 30px;
+    padding: 0px 6px;
+    border-radius: 3px;
+    border: 1px #a6a6a6 solid;
+    background-color: #f2f2f2;
+}
+
+/* slider幻灯的样式 */
+.ui-slider{
+    background:#666666;
+}
+.ui-slider .ui-slider-group {
+    width: 100%;
+    height: 100%;
+}
+.ui-slider .ui-slider-group .ui-slider-item {
+    background:#666666;
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    display: block;
+}
+.ui-slider .ui-slider-group .ui-slider-item img {
+    width: 100%;
+    display: block;
+}
+.ui-slider .ui-slider-dots {
+    position: absolute;
+    bottom: 6px;
+    right: 0;
+    padding: 0 6px;
+    text-align: center;
+    width: 100%;
+}
+/*.ui-slider .ui-slider-dots > b {*/
+/*width: 10px;*/
+/*height: 10px;*/
+/*border-radius: 5px;*/
+/*}*/
+
+.ui-toolbar{
+    background: #333333;
+    line-height: 36px;
+    height: 36px;
+    text-align: center;
+}
+.ui-toolbar .ui-icon-back {
+    float: left;
+    font-size: 14px;
+    color: #f7f7f7;
+    margin: 2px 0px 0px 4px;
+    width: 50px;
+    height: 30px;
+    line-height: 30px;
+    background-image: url(./images/toolbar.png);
+    background-position: 0px 0px;
+}
+.ui-toolbar .ui-pagebar {
+    color: #f7f7f7;
+    font-size: 14px;
+    text-align: center;
+    margin: 0 auto;
+}
+.ui-toolbar .ui-icon-delete {
+    float: right;
+    color: #f7f7f7;
+    font-size: 0px;
+    float: right;
+    margin: 2px 4px 0px 0px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    background-image: url(./images/toolbar.png);
+    background-position: 0px -36px;
+}
