--- a/themes/umeditor.css
+++ b/themes/umeditor.css
@@ -21,9 +21,9 @@
 .edui-btn-remind {
     background-position: -120px 0px;
 }
-.edui-btn input[type=file]{
-    width: 100%;
-    height: 100%;
+.edui-btn input{
+    width: 30px;
+    height: 30px;
     position: relative;
     opacity: 0;
     font-size: 30px;
@@ -31,12 +31,12 @@
 
 .edui-menu{
     position: absolute;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
     border: 1px #f2f2f2 solid;
     background-image: url(./images/menu.png);
-    -webkit-background-size: auto 20px;
+    -webkit-background-size: auto 30px;
 }
 .edui-toolbar{
     position: absolute;
