--- a/themes/umeditor.css
+++ b/themes/umeditor.css
@@ -1,39 +1,3 @@
-.edui-btn {
-    padding:0;
-    margin:0;
-    width: 40px;
-    height: 40px;
-    display: inline-block;
-    overflow: hidden;
-    background: url(./images/icons.png) no-repeat;
-    -webkit-background-size: auto 40px;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-.edui-btn-photo {
-    background-position: 0px 0px;
-}
-.edui-btn-camera {
-    background-position: -40px 0px;
-}
-.edui-btn-record {
-    background-position: -80px 0px;
-}
-.edui-btn-emotion {
-    background-position: -120px 0px;
-}
-.edui-btn-remind {
-    background-position: -160px 0px;
-}
-.edui-btn input{
-    padding:0;
-    margin:0;
-    width: 34px;
-    height: 40px;
-    position: relative;
-    opacity: 0;
-    font-size: 40px;
-}
-
 /* .edui-menu */
 .edui-menu{
     position: absolute;
@@ -79,7 +43,7 @@
     -webkit-transform:rotate(315deg);
 }
 
-/* edui-toolbar */
+
 .edui-toolbar{
     position: absolute;
     width: 100%;
@@ -90,6 +54,58 @@
     background-color: #f2f2f2;
     text-align: right;
 }
+
+/* edui-toolbar edui-btn */
+.edui-btn {
+    padding:0;
+    margin:0;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    overflow: hidden;
+}
+.edui-btn span {
+    padding:0;
+    margin:0;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    overflow: hidden;
+    background: url(./images/icons.png) no-repeat;
+    -webkit-background-size: auto 40px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    /*-webkit-transition: 100ms;*/
+}
+.edui-btn span.edui-btn-photo {
+    background-position: 0px 0px;
+}
+.edui-btn span.edui-btn-camera {
+    background-position: -40px 0px;
+}
+.edui-btn span.edui-btn-record {
+    background-position: -80px 0px;
+}
+.edui-btn span.edui-btn-emotion {
+    background-position: -120px 0px;
+}
+.edui-btn span.edui-btn-remind {
+    background-position: -160px 0px;
+}
+.edui-btn-active span{
+    background: url(./images/icons-active.png) no-repeat;
+}
+.edui-btn span input{
+    padding:0;
+    margin:0;
+    width: 34px;
+    height: 40px;
+    position: relative;
+    opacity: 0;
+    font-size: 40px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+
 .edui-slider-wrapper{
     overflow: hidden;
     background-color: #666666;
