--- a/themes/umeditor.css
+++ b/themes/umeditor.css
@@ -47,7 +47,7 @@
 .edui-toolbar{
     position: absolute;
     width: 100%;
-    height: 42px;
+    height: 46px;
     padding: 0px 6px;
     /*border-radius: 3px;*/
     border-top: 1px #a6a6a6 solid;
@@ -59,49 +59,50 @@
 .edui-btn {
     padding:0;
     margin:0;
-    width: 40px;
-    height: 40px;
+    width: 44px;
+    height: 44px;
     display: inline-block;
     overflow: hidden;
 }
 .edui-btn span {
     padding:0;
     margin:0;
-    width: 40px;
-    height: 40px;
+    width: 44px;
+    height: 44px;
     display: inline-block;
     overflow: hidden;
     background: url(./images/icons.png) no-repeat;
-    -webkit-background-size: auto 40px;
+    -webkit-background-size: auto 44px;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
-    /*-webkit-transition: 100ms;*/
 }
 .edui-btn span.edui-btn-photo {
     background-position: 0px 0px;
 }
 .edui-btn span.edui-btn-camera {
-    background-position: -40px 0px;
+    background-position: -44px 0px;
 }
 .edui-btn span.edui-btn-record {
-    background-position: -80px 0px;
+    background-position: -88px 0px;
 }
 .edui-btn span.edui-btn-emotion {
-    background-position: -120px 0px;
+    background-position: -132px 0px;
 }
 .edui-btn span.edui-btn-remind {
-    background-position: -160px 0px;
+    background-position: -176px 0px;
 }
 .edui-btn-active span{
     background: url(./images/icons-active.png) no-repeat;
+    -webkit-background-size: auto 44px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .edui-btn span input{
     padding:0;
     margin:0;
-    width: 34px;
-    height: 40px;
+    width: 44px;
+    height: 44px;
     position: relative;
     opacity: 0;
-    font-size: 40px;
+    font-size: 44px;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
