--- a/themes/umeditor.css
+++ b/themes/umeditor.css
@@ -14,12 +14,14 @@
     -webkit-box-shadow: 0 1px 2px 1px rgba(0,0,0,0.2);
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-transition: -webkit-transform 1s ease;
+    -webkit-user-select: none;
 }
 .edui-menu-plus{
     width: 40px;
     height: 40px;
     position: absolute;
     -webkit-transition: -webkit-transform 400ms ease;
+    -webkit-user-select: none;
 }
 .edui-menu-plus:before,
 .edui-menu-plus:after {
@@ -47,12 +49,13 @@
 .edui-toolbar{
     position: absolute;
     width: 100%;
-    height: 46px;
+    height: 45px;
     padding: 0px 6px;
     /*border-radius: 3px;*/
     border-top: 1px #a6a6a6 solid;
     background-color: #f2f2f2;
     text-align: right;
+    -webkit-user-select: none;
 }
 
 /* edui-toolbar edui-btn */
@@ -63,6 +66,7 @@
     height: 44px;
     display: inline-block;
     overflow: hidden;
+    -webkit-user-select: none;
 }
 .edui-btn span {
     padding:0;
@@ -72,6 +76,7 @@
     display: inline-block;
     overflow: hidden;
     background: url(./images/icons.png) no-repeat;
+    -webkit-user-select: none;
     -webkit-background-size: auto 44px;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
@@ -104,6 +109,7 @@
     opacity: 0;
     font-size: 44px;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-user-select: none;
 }
 
 
