--- a/themes/umeditor.css
+++ b/themes/umeditor.css
@@ -189,6 +189,9 @@
 }
 
 /* common */
+.clearfix{
+    clear: both;
+}
 .floatleft{
     float:left;
 }
@@ -226,4 +229,88 @@
     background-size: 80% 80%;
     color: #fff;
     text-decoration: none;
+}
+
+/* index.html */
+.editor_container{
+    margin: 5px;
+}
+.editor_input {
+    word-wrap: break-word;
+    -webkit-appearance: none;
+    -webkit-border-radius: 3px;
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    -webkit-box-sizing: border-box;
+    display: block;
+    font-size: 1em;
+    border: 1px solid #c6c6c6;
+    border-bottom: 1px solid #eaeaea;
+    /*font-weight: 600;*/
+    color: #333;
+    box-shadow: 0 0 5px #dfdfdf inset;
+    background: #fbfbfb
+}
+.editor_input p{
+    margin:0;
+    padding:0;
+}
+.form{
+    display: inline-block;
+    float: right;
+}
+.cleardoc{
+    font-size:12px;
+    float:right;
+    color:#1665be;
+    margin-top: 5px;
+    text-decoration: none;
+}
+.cleardoc:active,
+.cleardoc:hover{
+    text-decoration: underline;
+}
+
+/* show.php */
+.item{
+    padding: 10px;
+    border-bottom: 1px solid #e3e3e3;
+}
+.post {
+    word-wrap: break-word;
+    -webkit-appearance: none;
+    -webkit-border-radius: 3px;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    display: block;
+    font-size: 1em;
+    /*font-weight: 600;*/
+    color: #333;
+    padding: 10px 0px;
+}
+.post p{
+    margin:0;
+    padding:0;
+}
+.author .photo{
+    width: 30px;
+    height: 30px;
+}
+.author .name{
+    font-size:12px;
+    color: #1665be;
+}
+.detail{
+    height:12px;
+}
+.detail .time{
+    color:#999;
+    font-size:12px;
+    float:left;
+}
+.detail .comment{
+    font-size:12px;
+    float:right;
+    color:#1665be;
 }
