--- a/themes/umeditor.css
+++ b/themes/umeditor.css
@@ -305,29 +305,30 @@
 .post img.emotion{
     border: 0px;
 }
-.author .photo{
-    width: 30px;
-    height: 30px;
+.detail .photo{
+    width: 38px;
+    height: 38px;
+    margin-right:5px;
+    border-radius: 2px;
 }
-.author .name{
+.detail .name{
     font-size:12px;
     color: #1665be;
-}
-.detail{
-    height:12px;
 }
 .detail .time{
     color:#999;
     font-size:12px;
-    float:left;
 }
-.detail .delete{
+.opera{
+    height:12px;
+}
+.opera .delete{
     font-size:12px;
     float:right;
     color:#1665be;
     margin-left:4px;
 }
-.detail .comment{
+.opera .comment{
     font-size:12px;
     float:right;
     color:#1665be;
