--- a/themes/umeditor.css
+++ b/themes/umeditor.css
@@ -269,19 +269,15 @@
 .editor_input img.emotion{
     border: 0px;
 }
-.editor_input audio{
+.editor_input img.audio{
     width:126px;
     height:45px;
-    opacity: 0.3;
     line-height: 45px;
     background: url("images/audio.png");
+    border: 0px;
 }
-.editor_input audio:after{
-    content:url("images/audio.png");
+.editor_input audio{
     width:126px;
-    height:45px;
-    margin-right: -126px;
-    background: url("images/audio.png");
 }
 .form{
     display: inline-block;
@@ -326,11 +322,15 @@
 .post img.emotion{
     border: 0px;
 }
-.post audio{
+.post img.audio{
     width:126px;
     height:45px;
-    opacity: 0;
+    line-height: 45px;
     background: url("images/audio.png");
+    border: 0px;
+}
+.post audio{
+    width:126px;
 }
 .detail .photo{
     width: 39px;
