--- a/themes/umeditor.css
+++ b/themes/umeditor.css
@@ -326,7 +326,7 @@
     width:126px;
     height:45px;
     line-height: 45px;
-    background: url("images/audio.png");
+    background-image: url("images/audio.png");
     border: 0px;
 }
 .post audio{
